refined html and styling

--- a/index.html
+++ b/index.html
@@ -8,30 +8,28 @@
 </head>
 <body>
     <nav>
-        <img src="#" alt="Logo">
-        <ul>
-            <li>
-                <a href="#">header link one</a>
-            </li>
-            <li>
-                <a href="#">header link two</a>
-            </li>
-            <li>
-                <a href="#">header link three</a>
-            </li>
-        </ul>
+        <a class="logo" href="#">logo</a>
+        <div class="nav-container">
+            <a class="nav-link" href="#">header link one</a>
+            <a class="nav-link"  href="#">header link two</a>
+            <a class="nav-link" href="#">header link three</a>
+        </div>
     </nav>
     <section class="hero">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. 
-            It's a smaller font and the color is lower condstrast.</p>
-        <button class="hero">Sign up</button>
-        <img src="#" alt="placeholder image">
+        <div class="hero-text-container">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. 
+                It's a smaller font and the color is lower condstrast.</p>
+            <a href="#" class="button">Click click</a>
+        </div>
+        <div class="img-container">
+            <img src="https://images.unsplash.com/photo-1685648041929-f190ed4ff371?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2759&q=80" alt="placeholder image">
+        </div>
     </section>
     <section class="information">
         <div class="info-block">
             <div class="info-img-container">
-                <img src="#" alt="info image">
+                <img src="" alt="info image">
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
