major html additions and styling changes

--- a/index.html
+++ b/index.html
@@ -1,71 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+      </style>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
 </head>
 <body>
-    <nav>
-        <a class="logo" href="#">logo</a>
-        <div class="nav-container">
-            <a class="nav-link" href="#">header link one</a>
-            <a class="nav-link"  href="#">header link two</a>
-            <a class="nav-link" href="#">header link three</a>
-        </div>
-    </nav>
-    <section class="hero">
-        <div class="hero-text-container">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. 
-                It's a smaller font and the color is lower condstrast.</p>
-            <a href="#" class="button">Click click</a>
-        </div>
-        <div class="img-container">
-            <img src="https://images.unsplash.com/photo-1685648041929-f190ed4ff371?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2759&q=80" alt="placeholder image">
-        </div>
-    </section>
-    <section class="information">
-        <div class="info-block">
-            <div class="info-img-container">
-                <img src="" alt="info image">
-                <p>this is some subtext under an illustration or image</p>
+    <div class="main-container">
+        <nav>
+            <a class="logo" href="#">######</a>
+            <div class="nav-link-container">
+                <a class="nav-link" href="#">--01</a>
+                <a class="nav-link"  href="#">--02</a>
+                <a class="nav-link" href="#">--03</a>
             </div>
-        </div>
-        <div class="info-block">
-            <div class="info-img-container">
-                <img src="#" alt="info image">
-                <p>this is some subtext under an illustration or image</p>
+        </nav>
+        <section class="hero">
+            <div class="hero-text-container">
+                <h1>Between matter and spirit</h1>
+                <p>We live as cells winged with sentience, filaments with feeling — creatures 
+                    tasked with comprehending the ceaseless dialogue between our materiality and 
+                    our spirituality, tasked with living it.</p>
+                <a href="#" class="button">stay here</a>
             </div>
-        </div>
-        <div class="info-block">
-            <div class="info-img-container">
-                <img src="#" alt="info image">
-                <p>this is some subtext under an illustration or image</p>
+            <div class="img-container">
+                <img src="https://cdn.discordapp.com/attachments/1122383756603445279/1122388526122680320/micha3ll_We_live_as_cells_winged_with_sentience_filaments_with__41710d9e-ac9c-49e0-a683-43c93e544c91.png" alt="placeholder image">
             </div>
-        </div>
-        <div class="info-block">
-            <div class="info-img-container">
-                <img src="#" alt="info image">
-                <p>this is some subtext under an illustration or image</p>
+        </section>
+        <section class="information">
+            <div class="info-block">
+                <div class="info-img-container">
+                    <img id="i1" src="https://cdn.discordapp.com/attachments/1122383756603445279/1122396615865536563/micha3ll_We_live_as_cells_winged_with_sentience_filaments_with__7a8d9908-d64a-425c-8bfb-f6e3a3f3e723.png" alt="info image">
+                </div>
+                <p>comprehension</p>
             </div>
-        </div>
-    </section>
-    <section class="quote">
-        <p>
-            Inspiring quote <span class="quote-author">-Author, title</span>
-        </p>
-    </section>
-    <section class="cta">
-        <div class="cta-block">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for something</p>
-            <button class="cta-button">Sign up</button>
-        </div>
-    </section>
-    <footer>
-        Copyright Michael Eggar 2023
-    </footer>
+            <div class="info-block">
+                <div class="info-img-container">
+                    <img id="i2" src="https://cdn.discordapp.com/attachments/1122383756603445279/1122396611868360714/micha3ll_We_live_as_cells_winged_with_sentience_filaments_with__008ae5d5-b0c7-4884-acc7-c1e9126371fd.png" alt="info image">
+                </div>
+                <p>sentience</p>
+            </div>
+            <div class="info-block">
+                <div class="info-img-container">
+                    <img id="i3" src="https://cdn.discordapp.com/attachments/1122383756603445279/1122396609012051988/micha3ll_We_live_as_cells_winged_with_sentience_filaments_with__ab13472c-5c39-45ac-906d-342b95945d5e.png" alt="info image">
+                </div>
+                <p>materiality</p>
+            </div>
+            <div class="info-block">
+                <div class="info-img-container">
+                    <img id="i4" src="https://cdn.discordapp.com/attachments/1122383756603445279/1122396604545122405/micha3ll_We_live_as_cells_winged_with_sentience_filaments_with__e7086237-871f-459e-a877-328d6f16ac65.png" alt="info image">
+                </div>
+                <p>spirituality</p>
+            </div>
+        </section>
+        <section class="quote">
+            <p>
+                “It is a beautiful impulse to contain the infinite in the finite, 
+                to rest order from the chaos, to construct a foothold so we may climb towards 
+                higher truth. It is also a limiting one, for in naming things we often 
+                come to mistake the names for the things themselves.”
+            <p id="quote-author">― Maria Popova</p>
+        </section>
+        <section class="cta">
+            <div class="cta-block">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for something</p>
+                <button class="cta-button">Sign up</button>
+            </div>
+        </section>
+        <footer>
+            Copyright Michael Eggar 2023
+        </footer>
+    </div>
 </body>
 </html>
