--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav>
             <a class="logo" href="#">######</a>
             <div class="nav-link-container">
-                <a class="nav-link" href="#">--01</a>
-                <a class="nav-link"  href="#">--02</a>
-                <a class="nav-link" href="#">--03</a>
+                <a class="nav-link" href="#">--**</a>
+                <a class="nav-link"  href="#">--**</a>
+                <a class="nav-link" href="#">--**</a>
             </div>
         </nav>
         <section class="hero">
@@ -67,13 +67,17 @@
         </section>
         <section class="cta">
             <div class="cta-block">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for something</p>
-                <button class="cta-button">Sign up</button>
+                <div class="cta-text-container">
+                    <h3>spirit is the traveler</h3>
+                    <p>Spirit creates and spirit destroys. Creation without destruction 
+                        is not possible, destruction without creation feeds on past creation, 
+                        reduces form to matter, tends toward stillness.</p>
+                </div>
+                <a href="#" class="cta-button">start over</a>
             </div>
         </section>
         <footer>
-            Copyright Michael Eggar 2023
+            <p class="footer-text">created when viewed 2023</p>
         </footer>
     </div>
 </body>
