change to html content and some styling

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 <body>
     <div class="main-container">
         <nav>
-            <a class="logo" href="#">######</a>
+            <a class="logo" href="/index.html">matter // spirit</a>
             <div class="nav-link-container">
-                <a class="nav-link" href="#">--**</a>
-                <a class="nav-link"  href="#">--**</a>
-                <a class="nav-link" href="#">--**</a>
+                <a class="nav-link" href="#">understanding</a>
+                <a class="nav-link"  href="#">patience</a>
             </div>
         </nav>
         <section class="hero">
@@ -68,12 +67,12 @@
         <section class="cta">
             <div class="cta-block">
                 <div class="cta-text-container">
-                    <h3>spirit is the traveler</h3>
-                    <p>Spirit creates and spirit destroys. Creation without destruction 
+                    <h2>spirit is the traveler</h3>
+                    <p class="cta-text" >Spirit creates and spirit destroys. Creation without destruction 
                         is not possible, destruction without creation feeds on past creation, 
                         reduces form to matter, tends toward stillness.</p>
                 </div>
-                <a href="#" class="cta-button">start over</a>
+                <a href="/index.html" class="cta-button">start over</a>
             </div>
         </section>
         <footer>
