added animation to load-in

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main-container">
         <nav>
-            <a class="logo" href="/index.html">//</a>
+            <a class="logo" href="index.html">//</a>
             <div class="nav-link-container">
                 <a class="nav-link" href="#">understanding</a>
                 <a class="nav-link"  href="#">patience</a>
