fixed link to index.html in bottom button

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         is not possible, destruction without creation feeds on past creation, 
                         reduces form to matter, tends toward stillness.</p>
                 </div>
-                <a href="/index.html" class="cta-button">start over</a>
+                <a href="index.html" class="cta-button">start over</a>
             </div>
         </section>
         <footer>
